--- a/Developpement/design/home.css
+++ b/Developpement/design/home.css
@@ -1,154 +1,179 @@
+@charset "utf-8";
+/* CSS Document */
+
 @font-face {
     font-family: "coolvetica_rg";
     src: url("fonts/coolvetica_rg.ttf") format("truetype");
 }
-/* 
-    AUTHOR: Chris Coyier
-            chriscoyier@gmail.com
-            http://chriscoyier.net
-*/
 
-* { margin: 0; padding: 0; }
-
-html { overflow-y: scroll; }
-
-.clear {
-	clear: both;
+*{
+	border:none;
 }
 
-.floatLeft {
-	float: left;
+body{
+	background:#7cc5da;
+	margin:0;
+	padding:0;
 }
 
-.floatRight {
-	float: right;
+#wrapper{
+	width:960px;
+	margin:0 auto;
+	height:800px;
+	background:#3b902f;
 }
 
-body { 
-	font: 10px/2 "Lucida Grande", Helvetica, Sans-Serif;
-	color: #eee;
-}
-
-#background {
-	background: url(design/img/background.png) repeat 5% 5%;
-	position: absolute;
-	top: 0; left: 0; right: 0; bottom: 0;
-	z-index: 100;
-}
-
-#midground {
-	background: url(design/img/midground.png) repeat 20% 20%;
-	position: absolute;
-	top: 0; left: 0; right: 0; bottom: 0;
-	z-index: 100;
-}
-
-#foreground {
-	background: url(design/img/foreground.png) repeat 90% 110%;
-	position: absolute;
-	top: 0; left: 0; right: 0; bottom: 0;
-	z-index: 200;
-}
-
-#sidebar {
-	width: 160px;
-	float: left;
-	margin-right: 20px;
-}
-
-#main-content {
-	width: 540px;
-	float: right;
-}
-
-#page-wrap {
-	width: 720px;
-	margin: 0 auto;
-	position: relative;
-	z-index: 300;
-	background: rgba(0,0,0,0.7);
-	overflow: hidden;
-	padding: 30px 50px;
+	#header{
+		height:500px;
+		width:960px;
+		background:url('img/sky-bg.jpg') no-repeat top left;
+		position:relative;
+		overflow:hidden;
+	}
 	
-	border-left: 10px solid rgba(255,255,255,0.2);
-	border-right: 10px solid rgba(255,255,255,0.2);
-}
+		#header .foreground{
+			position:absolute;
+			top:350px;
+			z-index:100;
+		}
+		
+		#sliders{
+			overflow:hidden;
+		}
+		
+		#sliders>*{
+			display:none;
+		}
+		
+		#titlebar{
+			position:relative;
+			z-index:0;
+			top:100px;
+			text-align:center;
+		}
+		
+			#titlebar h1{
+				font-family: arial,sans-serif;
+				color:#37626F;
+				padding:10px;
+				font-size:70px;
+				letter-spacing: -2px;
+			}
+		
+		.village{
+			position:absolute;
+			top:366px;
+			left:30px;
+			z-index:90;
+			height:500px;
+			width:470px;
+			background:url('img/village-background.png') no-repeat top center;
+		}
+		
+			.village-padding{
+				padding:120px 25px 20px 25px;
+			}
+			
+			.village-padding p{
+				color:#F7F7F7;
+				font-family:"Lucida Grande",arial, sans-serif;
+				font-size:13px;
+				line-height:1.6em;
+			}
+			
+			.village-padding h2{
+				color:#FFF;
+				font-family:arial, sans-serif;
+				font-size:26px;
+				margin:0;
+				padding:0;
+				letter-spacing:-2px;
+			}
+			
+		.cloudbar{
+			position:absolute;
+			top:-465px;
+			left:600px;
+			z-index:90;
+			height:325px;
+			width:252px;
+			background:url('img/cloud-bar.png') no-repeat bottom center;
+		}
+			
+			.cloud-padding{
+				padding:20px;
+				text-align:center;
+			}
+			
+			.cloud-padding p{
+				color:#F7F7F7;
+				font-family:"Lucida Grande",arial, sans-serif;
+				font-size:13px;
+				line-height:1.6em;
+			}
+			
+			.cloud-padding h2{
+				margin:0px 0px 25px 0px;
+				padding:0;
+				color:#37626F;
+				font-family:arial, sans-serif;
+				font-size:26px;
+				letter-spacing:-2px;
+			}
 
-h1 {
-	font: 42px Georgia, Serif;
-	margin: 0 0 10px 0;
-	color: #eee;
-}
+		#content{
+			text-align:center;
+			padding:10px;
+		}
+		
+			#content h2{
+				
+				font-family:arial, sans-serif;
+				font-size:26px;
+				letter-spacing:-1px;
+			}
+			
+			#content p{
+				color:#FFF;
+				font-family:"Lucida Grande",arial, sans-serif;
+				font-size:13px;
+			}
 
-h2 {
-	font: 20px Georgia, Serif;
-	margin: 0 0 1px 0;
-	color: #eee;
-}
-
-h2.bump {
-	text-indent: 200px;
-}
-
-p {
-	margin: 0 0 15px 0;
-	color: #999;
-}
-
-code {
-	color: white;
-	margin: -1px 0 0 0;
-	font: 10px Courier;
-}
-
-p.thinParagraph {
-	width: 340px;
-}
-
-blockquote {
-	font: italic 15px/20px Georgia, Serif;
-	width: 180px;
-}
-
-blockquote p {
-	color: white;
-}
-
-blockquote.right {
-	float: right;
-}
-
-ul.meta {
-	width: 180px;
-	margin: 0 10px 0 0;
-	list-style: none;
-	float: left;
-}
-
-ul.meta li {
-	text-align: right;
-}
-
-ul.meta li.author {
-	font: normal small-caps normal 15px Georgia, Serif;
-	margin: 0 0 2px 0;
-	letter-spacing: 2px;
-}
-
-ul.meta li.date {
-	margin: 0 0 10px 0;
-}
-
-ul.meta li.comments {
-	font-style: italic;
-}
-
-.article {
-	float: right;
-	width: 340px;
-}
-
-ol {
-	margin: 20px 0;
-	list-style: inside decimal;
-}
+			#content a{
+				
+				text-decoration:none;
+			}
+	
+	
+	.entrer a {
+   border: 1px solid #003e40;
+   background: #62a708;
+   background: -webkit-gradient(linear, left top, left bottom, from(#85c630), to(#62a708));
+   background: -webkit-linear-gradient(top, #85c630, #62a708);
+   background: -moz-linear-gradient(top, #85c630, #62a708);
+   background: -ms-linear-gradient(top, #85c630, #62a708);
+   background: -o-linear-gradient(top, #85c630, #62a708);
+   padding: 4px 8px;
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: white;
+   font-size: 36px;
+   font-family: 'coolvetica_rg';
+   text-decoration: none;
+   vertical-align: middle;
+   box-shadow: 2px 2px 2px #003e40;
+   }
+.entrer a:hover {
+   border-top-color: #00ad23;
+   background: #00ad23;
+   color: #f5ff63;
+   }
+.entrer a:active {
+   border-top-color: #1b435e;
+   background: #85c630;
+   }
