--- a/Developpement/design/home.css
+++ b/Developpement/design/home.css
@@ -53,11 +53,26 @@ body{
 		}
 		
 			#titlebar h1{
-				font-family: arial,sans-serif;
-				color:#37626F;
-				padding:10px;
+				font-family:  arial,sans-serif;
+				color: white;
+				width: 400px;
 				font-size:70px;
-				letter-spacing: -2px;
+				margin: auto;
+		   border: 1px solid #003e40;
+	   background: #62a708;
+	   background: -webkit-gradient(linear, left top, left bottom, from(#85c630), to(#62a708));
+	   background: -webkit-linear-gradient(top, #85c630, #62a708);
+	   background: -moz-linear-gradient(top, #85c630, #62a708);
+	   background: -ms-linear-gradient(top, #85c630, #62a708);
+	   background: -o-linear-gradient(top, #85c630, #62a708);
+	   padding: 2px 4px;
+	   -webkit-border-radius: 6px;
+	   -moz-border-radius: 6px;
+	   border-radius: 6px;
+	   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+	   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+	   box-shadow: rgba(0,0,0,1) 0 1px 0;
+	   text-shadow: rgba(0,0,0,.4) 0 1px 0;
 			}
 		
 		.village{
@@ -77,7 +92,7 @@ body{
 			.village-padding p{
 				color:#F7F7F7;
 				font-family:"Lucida Grande",arial, sans-serif;
-				font-size:13px;
+				font-size: 17px;
 				line-height:1.6em;
 			}
 			
@@ -153,7 +168,7 @@ body{
    background: -moz-linear-gradient(top, #85c630, #62a708);
    background: -ms-linear-gradient(top, #85c630, #62a708);
    background: -o-linear-gradient(top, #85c630, #62a708);
-   padding: 4px 8px;
+   padding: 2px 4px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
