--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -699,7 +699,26 @@ border: 1px solid #003e40;
 }
 .tri {
     margin: auto;
-    width: 46%;
+    -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   border: 1px solid #003e40;
+   background: #62a708;
+   background: -webkit-gradient(linear, left top, left bottom, from(#85c630), to(#62a708));
+   background: -webkit-linear-gradient(top, #85c630, #62a708);
+   background: -moz-linear-gradient(top, #85c630, #62a708);
+   background: -ms-linear-gradient(top, #85c630, #62a708);
+   background: -o-linear-gradient(top, #85c630, #62a708);
+   padding: 6px -5px;
+   -webkit-border-radius: 6px;
+   -moz-border-radius: 6px;
+   border-radius: 6px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   width: 700px;
+   height: 75px;
 }
 .tri2 {
     margin: auto;
@@ -710,17 +729,19 @@ border: 1px solid #003e40;
     font-family: coolvetica_rg;
     font-size: 26px;
     margin: auto;
-    width: 20%;
+   float: left;
 }
 #area {
+	float: left;
     display: none;
 }
 #cat {
+	float: left;
     display: none;
 }
 .lol2 {
- 
-  
+	
+  float: right;
 }
 .no_news
 {
