--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -104,7 +104,7 @@ a {
    }
 .header_menu a:active {
    border-top-color: #1b435e;
-   background: #1b435e;
+   background: #85c630;
    }
 .news_sort {
     background-color: #85C630;
@@ -802,7 +802,7 @@ border: 1px solid #003e40;
    background: -moz-linear-gradient(top, #85c630, #62a708);
    background: -ms-linear-gradient(top, #85c630, #62a708);
    background: -o-linear-gradient(top, #85c630, #62a708);
-   padding: 6px -5px;
+   padding: 3px -2px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
@@ -820,7 +820,7 @@ border: 1px solid #003e40;
 .shorti {
     color: white;
     font-family: coolvetica_rg;
-    font-size: 26px;
+    font-size: 18px;
     margin: auto;
    float: left;
 }
