Signed-off-by: Michel Gille <gille@intechinfo.fr>

--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -2,6 +2,8 @@
     font-family: "coolvetica_rg";
     src: url("fonts/coolvetica_rg.ttf") format("truetype");
 }
+html { overflow-y: scroll; }
+
 body {
 	background-color: #7cc5da;
     font-family: 'Calibri';
@@ -842,21 +844,21 @@ border: 1px solid #003e40;
 	font-size : 39px;
 }
 #background {
-	background: url(design/img/background.png) repeat 5% 5%;
+	background: url(img/background.png) repeat 5% 5%;
 	position: absolute;
 	top: 0; left: 0; right: 0; bottom: 0;
 	z-index: 100;
 }
 
 #midground {
-	background: url(design/img/midground.png) repeat 20% 20%;
+	background: url(img/midground.png) repeat 20% 20%;
 	position: absolute;
 	top: 0; left: 0; right: 0; bottom: 0;
 	z-index: 100;
 }
 
 #foreground {
-	background: url(design/img/foreground.png) repeat 90% 110%;
+	background: url(img/foreground.png) repeat 90% 110%;
 	position: absolute;
 	top: 0; left: 0; right: 0; bottom: 0;
 	z-index: 200;
