Signed-off-by: Salman ALAMDAR <salman.alamdar@gmail.com>

--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -5,7 +5,7 @@
 html { overflow-y: scroll; }
 
 body {
-	background-color: #7cc5da;
+	background-color: #E2EDEB;
     font-family: 'Calibri';
 }
 a {
