--- a/Developpement/design/style.css
+++ b/Developpement/design/style.css
@@ -78,12 +78,7 @@ a {
 }
 .header_menu a {
    border: 1px solid #003e40;
-   background: #62a708;
-   background: -webkit-gradient(linear, left top, left bottom, from(#85c630), to(#62a708));
-   background: -webkit-linear-gradient(top, #85c630, #62a708);
-   background: -moz-linear-gradient(top, #85c630, #62a708);
-   background: -ms-linear-gradient(top, #85c630, #62a708);
-   background: -o-linear-gradient(top, #85c630, #62a708);
+   background: #4BB5C1;
    padding: 4px 8px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
@@ -101,7 +96,7 @@ a {
    }
 .header_menu a:hover {
    border-top-color: #00ad23;
-   background: #00ad23;
+   background: #7FC6BC;
    color: #f5ff63;
    }
 .header_menu a:active {
